    (image transformations, math content conversion, ...).
  - Close ``<dt>`` element in `depart_term()` to allow a `definition_list_item`
    with multiple `term`\ s (cf. [feature-requests:60]).

  .. _root-prefix: docs/user/config.html#root-prefix

* docutils/writers/latex2e/__init__.py

  - Fix placement of hyperlink target (label) for tables (bug #440).

* docutils/writers/manpage.py

  - Add preprocessor hinting tbl first line, see bugs #477.
  - Change tbl-Tables using box option, see bugs #475.
  - Apply literal block patch #205. Use ``.EE`` and ``.EX`` macros.
    Thanks to G. Branden Robinson (I assume).

* docutils/writers/odf_odt/__init__.py

  - Use context manager for image reading operations.
    Catch `URLError` when `urllib.request.urlopen()` fails.

  - Convert image URI to path if accessing a local file. Fixes bug #153.

* docutils/writers/s5_html/__init__.py

  - Warn if the S5 writer cannot copy the theme files.

  - Programmatic customization of "theme_url__" setting no longer
    overridden by the default for "theme__".

    __ docs/user/config.html#theme-url
    __ docs/user/config.html#theme

* tools/buildhtml.py

  - New option `rst_sources`_.
    Match `prune` values with `fnmatch.fnmatch()`.


Release 0.20.1 (2023-05-17)
===========================

* docutils/MANIFEST.in

  - Include tox.ini and docutils.conf in the source package
    (cf. bug #467 and bug #461).

* tools/rst2odt_prepstyles.py

  - Moved to ``docutils/writers/odf_odt/prepstyles.py``.
    Replaced with a provisional backwards compatibility script.


Release 0.20 (2023-05-09)
=========================

* General

  - Docutils 0.20 is the last version supporting Python 3.7 and 3.8.
  - Support Python 3.11 (patch #198 by Hugo van Kemenade).

* docutils/core.py

  - New functions `rst2…()` for use as "console_scripts" `entry points`_.
    (cf. `Future changes` in the RELEASE-NOTES_).

* docutils/frontend.py
