@@ -174,6 +174,7 @@ Changes since 0.20.1
 
 * docutils/writers/manpage.py
 
+  - Add multiple definition list term support, see feature #60.
   - Add preprocessor hinting tbl first line, see bugs #477.
   - Change tbl-Tables using box option, see bugs #475.
   - Apply literal block patch #205. Use ``.EE`` and ``.EX`` macros.
